# VNDATA2511_V1

./: CMakeLists.txt  README.md  partitions.csv
components/SHT30/: CMakeLists.txt  sht30.c
components/TM1638/: CMakeLists.txt  tm1638.c  tm1638_4G_ui.c  tm1638_server_ui.c  tm1638_wifi_ui.c
components/W5500/: CMakeLists.txt  esp_eth_mac_w5500.c  esp_eth_phy_w5500.c  w5500.h
components/app_config/: CMakeLists.txt
components/app_events/: CMakeLists.txt  app_events.c
components/app_logic/: CMakeLists.txt  app_logic.c  config_sync.c  sms_command.c  time_sync.c
components/app_logic/include/: app_logic.h  app_logic_ctx.h  config_sync.h  sms_command.h  time_sync.h
components/board/: CMakeLists.txt  board.c
components/diag_service/: CMakeLists.txt  diag_service.c
components/ds1307/: CMakeLists.txt  ds1307.c
components/ethernet_service/: CMakeLists.txt  ethernet_service.c
components/gps_service/: gps_service.c
components/legacy_ec800/: CMakeLists.txt  ec800.c
components/modem_service/: CMakeLists.txt  modem_service.c  modem_status.c  status_led.c
components/mqtt_service/: CMakeLists.txt  mqtt_service.c
components/net_manager/: CMakeLists.txt  net_manager.c
components/ntc_driver/: CMakeLists.txt  ntc_driver.c
components/ota_service/: CMakeLists.txt  ota_service.c
components/power_monitor/: CMakeLists.txt
components/provision_service/: CMakeLists.txt  provision_service.c
components/runtime_config/: CMakeLists.txt  runtime_config.c
components/sd_logger/: CMakeLists.txt  sd_logger.c
main/: CMakeLists.txt  idf_component.yml  main.c
(+45 files in other folders)
